--- a/Team Maverick/frontend/src/SOS/SuccessPage.css
+++ b/Team Maverick/frontend/src/SOS/SuccessPage.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-right: 280px;
   height: 100vh;
   /* background: #f9fafb; */
   color: #2d3748;
