--- a/Team Maverick/frontend/src/Dashboard/AssessmentPage.css
+++ b/Team Maverick/frontend/src/Dashboard/AssessmentPage.css
@@ -10,6 +10,11 @@
   border-radius: 10px;
 }
 
+.assessment-page .status {
+  font-weight: bold;
+  text-decoration: underline;
+
+}
 .progress-bar {
   height: 8px;
   background-color: #4caf50;
@@ -72,4 +77,9 @@ p {
   font-size: 18px;
   color: #555;
   margin-top: 10px;
+}
+
+.recommendations{
+  font-size: 18px;
+  margin-top: 30px;
 }
