--- a/Team Maverick/frontend/src/Login/loginpage.css
+++ b/Team Maverick/frontend/src/Login/loginpage.css
@@ -91,7 +91,7 @@
 }
 
 .login-button {
-  background-color: #012814; /* Button color */
+  background-color: #4caf50; /* Button color */
   color: white;
   border: none;
   border-radius: 4px;
@@ -104,7 +104,7 @@
 }
 
 .login-button:hover {
-  background-color: #011d0f; /* Darker shade for hover effect */
+  background-color: #329930; /* Darker shade for hover effect */
 }
 
 .reset-button {
