--- a/Team Maverick/frontend/src/SOS/EmergencyApp.css
+++ b/Team Maverick/frontend/src/SOS/EmergencyApp.css
@@ -1,20 +1,17 @@
 @import "leaflet/dist/leaflet.css";
 
 .sos_container {
-  position: relative;
+  /* position: absolute; */
   background-color: #b1c9b7;
-  /* background-color: ; */
-
-  width: 30rem;
+  width: 51rem;
   height: auto;
-  margin-top: -290px;
-  /* margin-bottom: 300px; */
+  margin-top: 34px;
   padding: 0px;
-  margin-left: 0px;
-  margin-bottom: 0px;
+  margin-left: 14rem;
+  
 }
 .container {
-  position: absolute;
+  position: relative;
   background: #ffffff;
   padding: 30px 50px;
   border-radius: 12px;
@@ -42,23 +39,26 @@
   padding-left: 0px;
   margin: 10px 0;
   border-radius: 8px;
-  border: 1px solid #cbd5e0;
+  border: 2px solid #cbd5e0;
   background-color: #f7fafc;
   font-size: 1rem;
+  color: black;
   transition: border-color 0.3s ease;
 }
 .container > input::placeholder {
   text-align: left;
   padding: 10px;
+  color: #c2c0c0 ;
+  
 }
 
 .container > input:focus {
-  border-color: #3182ce;
+  background-color: #fff;
   outline: none;
 }
 
 .container > button {
-  background-color: #3182ce;
+  background-color: #329930; 
   color: #ffffff;
   border: none;
   padding: 12px 16px;
@@ -72,15 +72,17 @@
 }
 
 .container > button:hover {
-  background-color: #2b6cb0;
+  background-color: #4caf50;
 }
 
 .container > .map {
-  width: 100%;
-  margin-top: 20px;
+  width: 28rem;
+  margin-top: -250px;
   border: 1px solid #cbd5e0;
   border-radius: 8px;
-  height: 300px;
+  height: 30rem;
+  margin-left: 490px;
+  
 }
 
 .container > .success-message {
@@ -147,14 +149,15 @@
 }
 
 .edit-button {
-  background-color: #3182ce;
+  background-color: #004d40;
   color: white;
   border: none;
   transition: background-color 0.3s ease;
 }
 
 .edit-button:hover {
-  background-color: #2b6cb0;
+  background-color: #026e33dc;
+
 }
 
 .delete-button {
@@ -172,7 +175,7 @@
 .container > .share-button {
   margin-top: 20px;
   padding: 12px 16px;
-  background-color: #38a169;
+  background-color: #329930;
   color: white;
   border: none;
   border-radius: 8px;
@@ -186,7 +189,7 @@
 .container > .back-button {
   margin-top: px;
   padding: 12px 16px;
-  background-color: #38a169;
+  background-color: #329930;
   color: white;
   border: none;
   border-radius: 8px;
@@ -201,7 +204,8 @@
 }
 .container > button.share-button:hover,
 .container > button.back-button:hover {
-  background-color: #2f855a;
+  background-color: #4caf50; 
+
 }
 
 .container > .message-sent {
